[package]
name = "sock2tcp"
version = "0.1.0"
authors = ["MARIRS <marirs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
tokio = { version = "1.0.0", features = ["net", "macros", "rt-multi-thread", "io-util" ] }

[[bin]]
name = "sock2tcp"

[profile.dev]
opt-level = 3

[profile.release]
debug-assertions = false
debug = false
opt-level = 3
lto = true
